fix clock icon alignment

--- a/src/components/dateReported/dateReported.scss
+++ b/src/components/dateReported/dateReported.scss
@@ -3,7 +3,6 @@
 .dateReported {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   color: $text-color-grey;
   margin: 1rem 0;
 
